[Feat] #89 - response 수정