@@ -10,6 +10,7 @@ import java.util.List;
 import org.example.kuit_kac.domain.diet_food.dto.DietFoodProfileResponse;
 import org.example.kuit_kac.domain.food.dto.FoodProfileResponse;
 import org.example.kuit_kac.domain.food.model.FoodStatusType;
+import java.util.stream.Collectors;
 
 @Schema(description = "식단 기록 응답 DTO")
 public record DietRecordProfileResponse(
@@ -41,10 +42,18 @@ public record DietRecordProfileResponse(
     Double totalKcal,
 
     @Schema(description = "식단에 포함된 음식 목록", requiredMode = Schema.RequiredMode.REQUIRED)
-    List<DietFoodProfileResponse> dietFoods
+    List<DietFoodProfileResponse> dietFoods,
+
+    @Schema(description = "식단에 포함된 AI 음식 목록", requiredMode = Schema.RequiredMode.REQUIRED)
+    List<DietFoodProfileResponse> dietAifoods
 ) {
     public static DietRecordProfileResponse todayFrom(Diet diet) {
         List<DietFoodProfileResponse> dietFoodProfiles = diet.getDietFoods().stream()
+                .filter(dietFood -> TimeGenerator.isToday(dietFood.getDietTime()))
+                .map(DietFoodProfileResponse::from)
+                .toList();
+
+        List<DietFoodProfileResponse> dietAifoodProfiles = diet.getDietAifoods().stream()
                 .filter(dietFood -> TimeGenerator.isToday(dietFood.getDietTime()))
                 .map(DietFoodProfileResponse::from)
                 .toList();
@@ -53,7 +62,7 @@ public record DietRecordProfileResponse(
             return null;
         }
 
-        return from(dietFoodProfiles, diet);
+        return from(dietFoodProfiles, dietAifoodProfiles, diet);
     }
 
     public static DietRecordProfileResponse from(Diet diet) {
@@ -61,17 +70,33 @@ public record DietRecordProfileResponse(
                 .map(DietFoodProfileResponse::from)
                 .toList();
 
-        return from(dietFoodProfiles, diet);
+        List<DietFoodProfileResponse> dietAifoodProfiles = diet.getDietAifoods().stream()
+                .map(DietFoodProfileResponse::from)
+                .toList();
+        
+        return from(dietFoodProfiles, dietAifoodProfiles, diet);
     }
 
-    private static DietRecordProfileResponse from(List<DietFoodProfileResponse> dietFoodProfiles, Diet diet) {
+    private static DietRecordProfileResponse from(List<DietFoodProfileResponse> dietFoodProfiles, List<DietFoodProfileResponse> dietAifoodProfiles, Diet diet) {
         double totalKcal = dietFoodProfiles.stream()
                 .mapToDouble(dietFood -> dietFood.quantity() * dietFood.food().getCalorie())
                 .sum();
 
+        double totalKcalAifood = dietAifoodProfiles.stream()
+                .mapToDouble(dietFood -> dietFood.quantity() * dietFood.food().getCalorie())
+                .sum();
+
+        totalKcal += totalKcalAifood;
+
         List<FoodProfileResponse> dietFoodProfileResponses = dietFoodProfiles.stream()
                 .map(DietFoodProfileResponse::food)
-                .toList();
+                .collect(Collectors.toList());
+
+        List<FoodProfileResponse> dietAifoodProfileResponses = dietAifoodProfiles.stream()
+                .map(DietFoodProfileResponse::food)
+                .collect(Collectors.toList());
+        
+        dietFoodProfileResponses.addAll(dietAifoodProfileResponses);
 
         FoodStatusType foodStatusType = FoodStatusType.getFoodStatusType(dietFoodProfileResponses);
 
@@ -85,7 +110,8 @@ public record DietRecordProfileResponse(
                 diet.getCreatedAt(),
                 diet.getUpdatedAt(),
                 totalKcal,
-                dietFoodProfiles
+                dietFoodProfiles,
+                dietAifoodProfiles
         );
     }
 }
